SGD8-2500: Fix horizontal scroll

--- a/components/31-molecules/opening-hours/_opening-hours.scss
+++ b/components/31-molecules/opening-hours/_opening-hours.scss
@@ -58,7 +58,7 @@ $week-breakpoint: '(min-width: 750px)';
     }
 
     &--date {
-      min-width: $bp-mobile;
+      min-width: calc($bp-mobile - 70px);
     }
 
     &--times {
